fix clipping of text on mobile

--- a/blocks/v2-quote/v2-quote.css
+++ b/blocks/v2-quote/v2-quote.css
@@ -15,6 +15,8 @@
 
 .v2-quote blockquote,
 .v2-quote blockquote p {
+  hanging-punctuation: none;
+  text-indent: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -22,7 +24,7 @@
 .v2-quote__quote-text,
 .v2-quote__quote-source {
   margin: 0 auto;
-  max-width: var(--text-block-max-width, calc(100vw - 16px));
+  max-width: var(--text-block-max-width, calc(100vw - 32px));
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
